--- a/data/index.html
+++ b/data/index.html
@@ -1,72 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ixfx / data</title>
+    <link rel="stylesheet" href="../demos.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ixfx / data</title>
-  <link rel="stylesheet" href="../demos.css">
-</head>
+  <body>
+    <main>
+      <header><a href="../">../</a> data</header>
+      <ul class="pillbox">
+        <li>
+          <a class="pill" href="https://clinth.github.io/ixfx-docs/data/"
+            >Documentation</a
+          >
+        </li>
+        <li>
+          <a class="pill" href="https://clinth.github.io/ixfx/modules/Data.html"
+            >API Reference</a
+          >
+        </li>
+      </ul>
+      <div class="demos">
+        <div>
+          <h1>trackers</h1>
+          <ul class="nobullets">
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/data/frequency"
+              ></a>
+              <a href="./frequency/">frequency</a>: Counts the number of times
+              some value has been 'seen'
+              <div class="techniques">Forms, frequency</div>
+            </li>
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/scale"
+              ></a>
+              <a href="../pointer/scale/">/pointer/scale</a>: pinch-to-zoom
+              gesture
+              <div class="techniques">
+                Points tracker, pointer events, gesture
+              </div>
+            </li>
+          </ul>
 
-<body>
-  <main>
-    <header>
-      <a href="../">../</a> data
-    </header>
-    <ul class="pillbox">
-      <li><a class="pill" href="https://clinth.github.io/ixfx-docs/data/">Documentation</a></li>
-      <li><a class="pill" href="https://clinth.github.io/ixfx/modules/Data.html">API Reference</a></li>
-    </ul>
-    <div class="demos">
-      <div>
-        <h1>trackers</h1>
-        <ul class="nobullets">
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/frequency"></a>
-            <a href="./frequency/">frequency</a>: Counts the number of times some value has been 'seen'
-            <div class="techniques">Forms, frequency</div>
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/pointer/scale"></a>
-            <a href="../pointer/scale/">/pointer/scale</a>: pinch-to-zoom gesture
-            <div class="techniques">Points tracker, pointer events, gesture</div>
-          </li>
-        </ul>
-
-        <h2>playgrounds</h2>
-        <ul class="nobullets">
-          <li>
-            <a href="../playgrounds/data/point-tracker/">point-tracker</a>
-          </li>
-        </ul>
+          <h2>playgrounds</h2>
+          <ul class="nobullets">
+            <li>
+              <a
+                href="https://clinth.github.io/ixfx-play/data/point-tracker/index.html"
+                >point-tracker</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h1>moving average</h1>
+          <ul class="nobullets">
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/data/moving-average-pointer"
+              ></a>
+              <a href="./moving-average-pointer/">pointer</a>: Average x & y
+              <div class="techniques">moving average, pointer events</div>
+            </li>
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/data/moving-average-audio"
+              ></a>
+              <a href="./moving-average-audio/">audio</a>: Average microphone
+              input
+              <div class="techniques">moving average, audio</div>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h1>pool</h1>
+          <ul class="nobullets">
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/data/pool-key"
+              ></a>
+              <a href="./pool-key/">key</a>: Uses a resource pool to associate a
+              HTML element per keypress
+              <div class="techniques">pool, key events</div>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div>
-        <h1>moving average</h1>
-        <ul class="nobullets">
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/moving-average-pointer"></a>
-            <a href="./moving-average-pointer/">pointer</a>: Average x & y
-            <div class="techniques">moving average, pointer events</div>
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/moving-average-audio"></a>
-            <a href="./moving-average-audio/">audio</a>: Average microphone input
-            <div class="techniques">moving average, audio</div>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h1>pool</h1>
-        <ul class="nobullets">
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/pool-key"></a>
-            <a href="./pool-key/">key</a>: Uses a resource pool to associate a HTML element per keypress
-            <div class="techniques">pool, key events</div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </main>
-</body>
-
+    </main>
+  </body>
 </html>
