--- a/io/index.html
+++ b/io/index.html
@@ -62,9 +62,9 @@
         </ul>
         <h2>playgrounds</h2>
         <ul class="nobullets">
-          <li><a href="../playgrounds/io/espruino-repl/">espruino-repl</a>: Run lines of code on an Espruino</li>
-          <li><a href="../playgrounds/io/espruino-plot/">espruino-plot</a>: Plot data</li>
-          <li><a href="../playgrounds/io/espruino-drv2605/">espruino-drv2605</a>: Haptic motor</li>
+          <li><a href="https://clinth.github.io/ixfx-play/io/espruino-repl/index.html">espruino-repl</a>: Run lines of code on an Espruino</li>
+          <li><a href="https://clinth.github.io/ixfx-play/io/espruino-plot/index.html">espruino-plot</a>: Plot data</li>
+          <li><a href="https://clinth.github.io/ixfx-play/io/espruino-drv2605/index.html">espruino-drv2605</a>: Haptic motor</li>
         </ul>
       </div>
 
@@ -107,7 +107,7 @@
         </ul>
         <h2>playgrounds</h2>
         <ul class="nobullets">
-          <li><a href="../playgrounds/io/keys/">keys</a>: Show key events</li>
+          <li><a href="https://clinth.github.io/ixfx-play/io/keys/index.html">keys</a>: Show key events</li>
         </ul>
       </div>
       <div>
