--- a/pointer/index.html
+++ b/pointer/index.html
@@ -118,10 +118,10 @@
         <ul class="nobullets">
           <h1>playgrounds</h1>
           <ul class="nobullets">
-            <li><a href="../playgrounds/pointer/">pointer</a>: Pointer events</li>
-            <li><a href="../playgrounds/pointer/gesture/">gesture</a>: Touch gestures</li>
-            <li><a href="../playgrounds/pointer/pen/">pen</a>: Pen pointer events</li>
-            <li><a href="../playgrounds/pointer/force/">force</a>: Trackpad/stylus pressure</li>
+            <li><a href="https://clinth.github.io/ixfx-play/pointer/index.html">pointer</a>: Pointer events</li>
+            <li><a href="https://clinth.github.io/ixfx-play/pointer/gesture/index.html">gesture</a>: Touch gestures</li>
+            <li><a href="https://clinth.github.io/ixfx-play/pointer/pen/index.html">pen</a>: Pen pointer events</li>
+            <li><a href="https://clinth.github.io/ixfx-play/pointer/force/index.html">force</a>: Trackpad/stylus pressure</li>
           </ul>
       </div>
 
