--- a/pointer/remote/index.html
+++ b/pointer/remote/index.html
@@ -47,8 +47,7 @@
     <li><a href="sender.html">sender</a></li>
     <li><a href="receiver.html">receiver</a></li>
   </ul>
-  <p>Please see WEBSOCKETS.MD in the demos root folder for more details on connecting between devices.</p>
-  <script type="module" src="script.js"></script>
+  <p>Please see _readmes/websockets.md in the demos root folder for more details on connecting between devices.</p>
 </body>
 
 </html>
