geometry/point-dot-product demo

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -354,6 +354,16 @@
                 Points.relation, Pointer events, relative coordinates
               </div>
             </li>
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/geometry/point-dot-product"
+              ></a>
+              <a href="./point-dot-product/">Dot product</a>: Calculate similarity between vectors
+              <div class="techniques">
+                Points.dotProduct
+              </div>
+            </li>
           </ul>
         </div>
         <div>
