Cleaned up gamepad/button and keyboard/key

--- a/io/index.html
+++ b/io/index.html
@@ -111,6 +111,19 @@
         </ul>
       </div>
       <div>
+        <h1>gamepad</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/gamepad/button"></a>
+            <a href="./gamepad/button/">button</a>: track the state of a key
+          </li>
+        </ul>
+        <h2>playgrounds</h2>
+        <ul class="nobullets">
+          <li><a href="https://clinth.github.io/ixfx-play/io/keys/index.html">keys</a>: Show key events</li>
+        </ul>
+      </div>
+      <div>
         <h1>etc</h1>
         <ul class="nobullets">
           <li>
