modulation/env-starter

--- a/modulation/index.html
+++ b/modulation/index.html
@@ -74,6 +74,13 @@
               <a href="./env-osc/">osc</a>: Cross-modulate an envelope and
               oscillator
             </li>
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-starter"
+              ></a>
+              <a href="./env-starter/">starter</a>: Empty sketch to get you going
+            </li>
           </ul>
         </div>
         <div>
