small updates to envelope sketches

--- a/modulation/env-osc/index.html
+++ b/modulation/env-osc/index.html
@@ -46,7 +46,7 @@
     }
   </style>
   <section>
-    <h1>thing</h1>
+    <h1>env-osc</h1>
     <p>Tap to trigger envelope.</p>
     <p>This sketch uses an oscillator to module an envelope.</p>
     <div id="thing"></div>
