--- a/io/index.html
+++ b/io/index.html
@@ -28,7 +28,47 @@
       </p>
     </section>
     <div class="demos">
+
       <div>
+        <h1>keyboard</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/key"></a>
+            <a href="./keyboard/key/">key</a>: track the state of a key
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
+            <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/cursor"></a>
+            <a href="./keyboard/cursor/">cursor</a>: move an element around with the cursor keys
+          </li>
+        </ul>
+        <h2>playgrounds</h2>
+        <ul class="nobullets">
+          <li><a href="https://clinth.github.io/ixfx-play/io/keys/index.html">keys</a>: Show key events</li>
+        </ul>
+      </div>
+      <div>
+        <h1>gamepad</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/gamepad/button/"></a>
+            <a href="./gamepad/button/">button</a>: track the state of a key
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h1>midi</h1>
+        <ul class="nobullets">
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/midi/button/"></a>
+            <a href="./midi/button/">button</a>: work with a MIDI note as a button
+          </li>
+        </ul>
+      </div>
+            <div>
         <h1>espruino</h1>
         <ul class="nobullets">
           <li>
@@ -89,40 +129,7 @@
 
       </div>
 
-      <div>
-        <h1>keyboard</h1>
-        <ul class="nobullets">
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/key"></a>
-            <a href="./keyboard/key/">key</a>: track the state of a key
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
-            <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
-          </li>
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/cursor"></a>
-            <a href="./keyboard/cursor/">cursor</a>: move an element around with the cursor keys
-          </li>
-        </ul>
-        <h2>playgrounds</h2>
-        <ul class="nobullets">
-          <li><a href="https://clinth.github.io/ixfx-play/io/keys/index.html">keys</a>: Show key events</li>
-        </ul>
-      </div>
-      <div>
-        <h1>gamepad</h1>
-        <ul class="nobullets">
-          <li>
-            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/gamepad/button"></a>
-            <a href="./gamepad/button/">button</a>: track the state of a key
-          </li>
-        </ul>
-        <h2>playgrounds</h2>
-        <ul class="nobullets">
-          <li><a href="https://clinth.github.io/ixfx-play/io/keys/index.html">keys</a>: Show key events</li>
-        </ul>
-      </div>
+
       <div>
         <h1>etc</h1>
         <ul class="nobullets">
