--- a/starters/thing/index.html
+++ b/starters/thing/index.html
@@ -38,8 +38,8 @@
       position: absolute;
       border: 1em solid black;
       border-radius: 100%;
-      width: 20vw;
-      height: 20vw;
+      width: 40vmin;
+      height: 40vmin
     }
   </style>
   <section>
