--- a/starters/thing/index.html
+++ b/starters/thing/index.html
@@ -43,7 +43,7 @@
     }
   </style>
   <section>
-    <h1>thing</h1>
+    <h1>thing.</h1>
     <div id="thing"></div>
     <script type="module" src="script.js"></script>
   </section>
