Use coalescedEvents() for pointer movement

--- a/starters/thing/index.html
+++ b/starters/thing/index.html
@@ -41,6 +41,9 @@
       width: 40vmin;
       height: 40vmin
     }
+    #log { 
+      position: absolute;
+    }
   </style>
   <section>
     <h1>thing</h1>
