--- a/pointer/press/index.html
+++ b/pointer/press/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>press</title>
 </head>
 
@@ -28,14 +28,18 @@
       background-color: var(--bg);
       color: var(--fg);
       font-family: var(--font);
+      user-select: none;
+      -webkit-user-select: none;
+      overscroll-behavior: none;
+      touch-action: none;
     }
 
     #thing {
       position: absolute;
       border: 1em solid black;
       border-radius: 100%;
-      width: 20vw;
-      height: 20vw;
+      width: 30vmin;
+      height: 30vmin;
     }
   </style>
   <section>
