Made separate single/multiple key demos

--- a/io/index.html
+++ b/io/index.html
@@ -37,6 +37,10 @@
             <a href="./keyboard/key/">key</a>: track the state of a key
           </li>
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/keys"></a>
+            <a href="./keyboard/keys/">keys</a>: track the state of more than one key
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/io/keyboard/typer"></a>
             <a href="./keyboard/typer/">typer</a>: add individual letters to the screen with key events
           </li>
