--- a/io/keyboard/keys/index.html
+++ b/io/keyboard/keys/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>key</title>
+  <title>keys</title>
 </head>
 
 <body>
   <style>
     :root {
-      --hue: 20;
+      --hue: 220;
       --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       --bg: hsl(var(--hue), 10%, 90%);
       --fg: hsl(var(--hue), 90%, 15%);
@@ -37,9 +37,8 @@
     }
   </style>
   <section>
-    <h1>key</h1>
-    <p>Press 'f' on your keyboard.</p>
-    <div id="vis"></div>
+    <h1>keys</h1>
+    <p>Press 'f' or 'k' on your keyboard.</p>
     <div id="info"></div>
     <script type="module" src="script.js"></script>
   </section>
