Use Envelopes sub-module

--- a/modulation/index.html
+++ b/modulation/index.html
@@ -50,14 +50,7 @@
             </li>
           </ul>
           <ul class="nobullets">
-            <li>
-              <a
-                class="source"
-                href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/env-decay"
-              ></a>
-              <a href="./env-decay/">decay</a>: Using an envelope to gradually
-              reduce a value
-            </li>
+
             <li>
               <a
                 class="source"
@@ -81,6 +74,11 @@
               ></a>
               <a href="./env-starter/">starter</a>: Empty sketch to get you going
             </li>
+            <li>
+              Playground: <a href="https://clinth.github.io/ixfx-play/modulation/envelopes/decay/">envelope-decay</a>: Using an envelope to gradually
+              reduce a value
+            </li>
+
           </ul>
         </div>
         <div>
