Added simple audio/play demo

--- a/audio/index.html
+++ b/audio/index.html
@@ -23,6 +23,11 @@
         <p></p>
         <ul class="nobullets">
           <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/audio/play"></a>
+            <a href="../audio/play/">play</a>: Simple playback of an audio file
+            <div class="techniques">HTMLAudioElement</div>
+          </li>
+          <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/audio/stereo-pan"></a>
             <a href="../audio/stereo-pan/">stereo-pan</a>: Panning audio on a left-to-right spectrum.
             <div class="techniques">StereoPannerNode, oscillators</div>
