--- a/data/index.html
+++ b/data/index.html
@@ -46,6 +46,15 @@
                 Points tracker, pointer events, gesture
               </div>
             </li>
+            <ul class="nobullets">
+              <li>
+                <a
+                  class="source"
+                  href="https://github.com/ClintH/ixfx-demos/tree/main/data/point-tracker"
+                ></a>
+                <a href="./point-tracker/">point-tracker</a>
+                <div class="techniques">Point tracker</div>
+              </li>
           </ul>
 
           <h2>playgrounds</h2>
