--- a/geometry/point-dot-product/index.html
+++ b/geometry/point-dot-product/index.html
@@ -51,10 +51,12 @@
   <section>
     <h1>point-dot-product</h1>
     <p>Calculates similarity between direction of pointer movement to another vector (in this case, an upwards vector).</p>
+    <p>The dot product gets closer to 1 as it matches the vector.</p>
     <p>Click and drag.</p>
     <div>Pointer vector: <span id="vector"></span></div> 
     <div id="thing">⬆</div>
     <div>Dot product: <span id="dot-product"></span></div>
+
   </section>
 
   <script type="module" src="script.js"></script>
