--- a/modulation/index.html
+++ b/modulation/index.html
@@ -234,7 +234,22 @@
             </li>
           </ul>
         </div>
+
+        <div>
+          <h1>etc</h1>
+          <ul class="nobullets">
+            <li>
+              <a
+                class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/per-second"
+              ></a>
+              <a href="./per-second/">per-second</a>: Modulating things based on clock-time
+            </li>
+          </ul>
+        </div>
       </div>
+
+    
     </main>
   </body>
 </html>
