--- a/pointer/index.html
+++ b/pointer/index.html
@@ -91,6 +91,11 @@
             average angle in a stream of points
             <div class="techniques">Number and point tracker</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/data/point-tracker"></a>
+            <a href="../data/">data</a>/<a href="../data/point-tracker/">point tracker</a>: Using the pointTracker, calculates speed of the pointer.
+            <div class="techniques">Point tracker</div>
+          </li>
         </ul>
       </div>
 
