--- a/geometry/point-particle/index.html
+++ b/geometry/point-particle/index.html
@@ -21,6 +21,8 @@
       overscroll-behavior-y: contain;
       -webkit-overflow-scrolling: auto;
       touch-action: none;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
     }
 
     h1 {
