--- a/dom/index.html
+++ b/dom/index.html
@@ -40,7 +40,14 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/log"></a>
             <a href="./log/">Log to the screen instead of console</a>
-
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/display-data"></a>
+            <a href="./display-data/">Display current state data</a>
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/inline-console"></a>
+            <a href="./inline-console/">Intercept console.log() and errors and display on the page</a>
           </li>
         </ul>
       </div>
