More skeleton things-canvas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li>/ <a href="./modulation/">modulation</a></li>
             <li>/ <a href="./pointer/">pointer</a></li>
             <li>/ <a href="./flow/">flow</a></li>
+            <li>/ <a href="./visuals/">visuals</a></li>
           </ul>
         </div>
 
