--- a/starters/index.html
+++ b/starters/index.html
@@ -38,7 +38,7 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/things-canvas"></a>
             <a href="./things-canvas/">things-canvas</a>: Canvas that fills the viewport and continually redraws a set
             of
-            things. Useful for particle effects.
+            things. Useful for particle effects. If you want to see a version that does something, see <a href="../visuals/things-canvas/">../visuals/thing-canvas</a>
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
@@ -55,6 +55,10 @@
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starters/canvas"></a>
             <a href="canvas/">canvas</a>: basic drawing loop
+          </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starters/things-canvas"></a>
+            <a href="things-canvas/">things-canvas</a>: basic drawing loop with the things model
           </li>
         </ul>
       </div>
