--- a/visuals/index.html
+++ b/visuals/index.html
@@ -36,6 +36,11 @@
             <a href="./circle-fill/">circle-fill</a>: Different distributions of random points in a circle
             <div class="techniques">Flow.repeat, random</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/visuals/things-canvas"></a>
+            <a href="./things-canvas/">things-canvas</a>: Uses the 'things' pattern, drawing on the canvas.
+            <div class="techniques">Things</div>
+          </li>
         </ul>
       </div>
     </div>
