--- a/starters/x/index.html
+++ b/starters/x/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>from-center</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <title>x</title>
 </head>
 
 <body>
@@ -17,16 +17,8 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      user-select: none;
-      -webkit-user-select: none;
-      overscroll-behavior: none;
-      touch-action: none;
-      cursor: none;
-    }
-    
     :root {
-      --hue: 320;
+      --hue: 200;
       --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       --bg: hsl(var(--hue), 10%, 80%);
       --fg: hsl(var(--hue), 100%, 30%);
@@ -36,10 +28,15 @@
       background-color: var(--bg);
       color: var(--fg);
       font-family: var(--font);
+      overflow: hidden;
+      user-select: none;
+      -webkit-user-select: none;
+      overscroll-behavior: none;
+      touch-action: none;
     }
   </style>
   <section>
-    <h1>from center</h1>
+    <h1>x</h1>
     <canvas id="canvas"></canvas>
     <script type="module" src="script.js"></script>
   </section>
