--- a/visuals/things-canvas/index.html
+++ b/visuals/things-canvas/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <title>drag</title>
+  <title>things-canvas</title>
 </head>
 
 <body>
@@ -18,10 +18,10 @@
     }
 
     :root {
-      --hue: 90;
+      --hue: 200;
       --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      --bg: hsl(var(--hue), 10%, 10%);
-      --fg: hsl(var(--hue), 100%, 80%);
+      --bg: hsl(var(--hue), 10%, 80%);
+      --fg: hsl(var(--hue), 100%, 30%);
     }
 
     body {
@@ -29,26 +29,15 @@
       color: var(--fg);
       font-family: var(--font);
       overflow: hidden;
+      user-select: none;
+      -webkit-user-select: none;
+      overscroll-behavior: none;
       touch-action: none;
-    }
-
-    .thing {
-      position: absolute;
-      left: 0;
-      top: 0;
-      background-color: hsla(var(--hue), 50%, 50%, 0.5);
-      transition: background 0.5s ease-in;
-    }
-
-    .thing:hover {
-      background-color: hsla(var(--hue), 50%, 50%, 0.7);
-    }
-
-    .dragging {
-      border: 4px solid var(--fg);
     }
   </style>
   <section>
+    <h1>things-canvas</h1>
+    <canvas id="canvas"></canvas>
     <script type="module" src="script.js"></script>
   </section>
 </body>
