Made an even more bare starters/things

--- a/starters/index.html
+++ b/starters/index.html
@@ -28,7 +28,7 @@
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starters/things"></a>
-            <a href="things/">things</a>: like 'thing', but any number of things (using DOM)
+            <a href="things/">things</a>: like 'thing', but any number of things (using DOM). If you want to see a version that does something, see <a href="../dom/things/">../dom/things</a>.
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/thing-canvas"></a>
@@ -38,7 +38,7 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/starter/things-canvas"></a>
             <a href="./things-canvas/">things-canvas</a>: Canvas that fills the viewport and continually redraws a set
             of
-            things. Useful for particle effects. If you want to see a version that does something, see <a href="../visuals/things-canvas/">../visuals/thing-canvas</a>
+            things. Useful for particle effects. If you want to see a version that does something, see <a href="../visuals/things-canvas/">../visuals/thing-canvas</a>.
           </li>
           <li>
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/flow/statemachine-starter"></a>
