--- a/ml/pose/shoulders/index.html
+++ b/ml/pose/shoulders/index.html
@@ -33,7 +33,12 @@
       overscroll-behavior: none;
       touch-action: none;
     }
-
+    #ixfx-data-display {
+      top: unset !important;
+      right: unset !important;
+      bottom: 0 !important;
+      left: 0 !important;
+    }
   </style>
   <section>
     <h1>pose-shoulders</h1>
