--- a/ml/pose/head/index.html
+++ b/ml/pose/head/index.html
@@ -29,6 +29,13 @@
       color: var(--fg);
       font-family: var(--font);
     }
+
+    #ixfx-data-display {
+      top: unset !important;
+      right: unset !important;
+      bottom: 0 !important;
+      left: 0 !important;
+    }
   </style>
   <section>
     <!-- If you're not using the panel, comment-out these lines... -->
