pointer/drag-spring wip

--- a/dom/index.html
+++ b/dom/index.html
@@ -49,6 +49,10 @@
             <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/inline-console"></a>
             <a href="./inline-console/">Intercept console.log() and errors and display on the page</a>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/dom/things"></a>
+            <a href="./things/">Things model, using the DOM</a>
+          </li>
         </ul>
       </div>
 
