audio/oscillator-pool demo

--- a/audio/index.html
+++ b/audio/index.html
@@ -48,6 +48,11 @@
             <a href="../audio/oscillator/">oscillator</a>: Control frequency and volume of an oscillator
             <div class="techniques">OscillatorNode, GainNode</div>
           </li>
+          <li>
+            <a class="source" href="https://github.com/ClintH/ixfx-demos/tree/main/audio/oscillator"></a>
+            <a href="../audio/oscillator-pool/">oscillator-pool</a>: A pool of voices triggered by keypresses or touch.
+            <div class="techniques">OscillatorNode, GainNode, Pool</div>
+          </li>
         </ul>
       </div>
       <div>
